[package]
name = "mathlib4-viewer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
clap = { version = "4.3.11", features = ["derive"] }
dirs = "5.0.1"
futures-util = "0.3.28"
fuzzy-matcher = "0.3.7"
indexmap = { version = "2.0.0", features = ["serde"] }
inquire = "0.6.2"
reqwest = { version = "0.11.18", features = ["stream"] }
serde = { version = "1.0.167", features = ["derive", "rc"] }
serde_json = { version = "1.0.100", features = ["indexmap"] }
tempfile = "3.6.0"
tokio = { version = "1.29.1", features = ["full"] }
tower-http = { version = "0.4.1", features = ["fs"] }
zip-extract = "0.1.2"
